plugins {
    id 'base'
    id 'java-platform'
    alias(libs.plugins.sonarqube)
    alias(libs.plugins.spring.boot) apply false
    alias(libs.plugins.dependency.management) apply false
    alias(libs.plugins.jib) apply false
    alias(libs.plugins.spotless) apply false
    alias(libs.plugins.spotbugs) apply false
}

// 应用模块（产出可启动 jar 和 Docker 镜像）
ext.appModules = [
        project(':matrix-admin'),
        project(':matrix-gateway'),
        project(':matrix-resource:resource-biz'),
]
def appModules = ext.appModules

// 所有 Java 模块（排除 BOM）
def commons = subprojects - project(':matrix-bom')

wrapper {
    gradleVersion = GRADLE_VERSION
}

sonar {
    properties {
        property "sonar.projectKey", findProperty('sonar.projectKey') ?: ''
        property "sonar.projectName", findProperty('sonar.projectName') ?: 'matrix-cloud'
        property "sonar.host.url", findProperty('sonar.host.url') ?: 'http://localhost:9000'
        property "sonar.token", findProperty('sonar.token') ?: ''
    }
}

allprojects {
    group = GROUP
    version = VERSION

    repositories {
        mavenLocal()
        maven { url = 'https://repo.huaweicloud.com/repository/maven/' }
        maven { url = 'https://maven.aliyun.com/repository/central' }
        maven { url = 'https://maven.aliyun.com/repository/public' }
        maven { url = 'https://maven.aliyun.com/repository/gradle-plugin' }
        mavenCentral()
    }
}

// ============================================================
// 通用配置：所有非 BOM 模块共享
// ============================================================
configure(commons) {
    apply plugin: 'idea'
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.sonarqube'
    apply plugin: 'io.spring.dependency-management'

    // 静态分析工具
    apply from: "${rootProject.projectDir}/gradle/checkstyle.gradle"
    apply from: "${rootProject.projectDir}/gradle/spotbugs.gradle"
    apply from: "${rootProject.projectDir}/gradle/pmd.gradle"
    apply from: "${rootProject.projectDir}/gradle/spotless.gradle"

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    compileJava {
        options.encoding = 'UTF-8'
        options.compilerArgs.add '-parameters'
    }

    compileTestJava {
        options.encoding = 'UTF-8'
        options.compilerArgs.add '-parameters'
    }

    dependencyManagement {
        imports {
            mavenBom "com.alibaba.cloud:spring-cloud-alibaba-dependencies:${libs.versions.springCloudAlibaba.get()}"
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${libs.versions.springCloud.get()}"
            mavenBom "net.dreamlu:mica-bom:${libs.versions.mica.get()}"
        }
    }

    dependencies {
        implementation platform(project(':matrix-bom'))

        // Lombok：所有模块通用
        compileOnly libs.lombok
        annotationProcessor libs.lombok
        annotationProcessor libs.lombok.mapstruct.binding
        testCompileOnly libs.lombok
        testAnnotationProcessor libs.lombok

        // MapStruct Plus：所有模块通用
        implementation libs.mapstruct.plus.starter
        annotationProcessor libs.mapstruct.plus.processor
        testAnnotationProcessor libs.mapstruct.plus.processor

        // mica-auto：自动配置注册器，所有模块统一应用
        compileOnly libs.mica.auto
        annotationProcessor libs.mica.auto

        // SpotBugs 注解
        compileOnly libs.spotbugs.annotations
    }

    test {
        enabled = false
        useJUnitPlatform()
    }

    compileJava.dependsOn(processResources)
}

// ============================================================
// 库模块配置：禁用 bootJar，启用普通 jar
// ============================================================
configure(commons - appModules) {
    tasks.matching { it.name == 'bootJar' }.configureEach { enabled = false }
    jar { enabled = true }
}

// ============================================================
// 应用模块配置：启用 bootJar、Spring Boot 插件
// ============================================================
configure(appModules) {
    apply plugin: 'org.springframework.boot'

    springBoot {
        buildInfo()
    }
    bootJar { enabled = true }
    jar { enabled = false }
}

// ============================================================
// Jib 镜像构建配置
// ============================================================
apply from: "${rootProject.projectDir}/deploy.gradle"
